# projet_ter

./: .gitattributes  README.md  app.py  projet.ipynb  recommandation.ipynb  svd_recommandation.py  tests.ipynb
reco_books/: Makefile  README.md  app.py  predict_steamlit.py  predict_svd_streamlit.py  pyproject.toml  redame.py  tests.py
reco_books/app/: Accueil.py  app.py  streamlit_db.py
reco_books/app/pages/: 1_Bibliothèque.py  2_Ma_Collection.py  3_Recommandation.py  3_Recommandations.py  5_Entrainement_W2V.py  6_Entrainement_Modèles_Collaboratifs.py  6_Entrainement_SBERT.py  7_Entrainement_NMF.py  8_Metriques.py
reco_books/app_admin/: Accueil.py  app.py
reco_books/app_admin/pages/: 1_Uniformisation_du_dataset.py  2_Entrainement_SVD.py  2_Exploration.py  3_Entrainement_W2V.py  3_Prétraitement_des_Données.py  4_Création_Features.py  4_Entrainement_SBERT.py  4_Gestion_des_datasets.py  5_Choix_et_Entraînement_des_modèles.py  5_Entrainement_Modèles_Collaboratifs.py  5_Exploration.py  (+10 more)
reco_books/app_db/: Accueil.py  app_auth.py  generate_keys.py  hashed_pwd.pkl
reco_books/docs/: mkdocs.yml
reco_books/notebooks/: notebook.ipynb  recommandation.ipynb
reco_books/open_library/: openlibrary_extract.py
reco_books/recommandation_de_livres/: __init__.py  all_datasets.py  collaborative_dataset.py  config.py  content_dataset.py  content_dataset_depository.py  plots.py
reco_books/streamlit/: app_auth.py  app_reco_user.py  predict_sbert_streamlit.py  predict_streamlit.py  predict_svd_streamlit.py  predict_w2v_streamlit.py  streamlit_test.py  test_user_app.py
(+83 files in other folders)
